<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Penamaan String : {tipe}_{fungsi (jika ada)}_{nama string}-->

    <!--Contoh : hint_username-->
    <!--Contoh : view_nilai :-->

    <string name="app_name">Finpro</string>
    <string name="app_name_long">Finpro - Final Project Management System</string>
    <string name="app_name_subtitle">Final Project Management System</string>

    <string name="hint_id_pengguna">ID Pengguna</string>
    <string name="hint_kata_sandi">Kata Sandi</string>
    <string name="hint_info_judul">Judul</string>
    <string name="hint_info_isi">Isi</string>
    <string name="hint_judulpa_judul">Judul Proyek Akhir</string>
    <string name="hint_judulpa_kategori">Kategori</string>
    <string name="hint_judulpa_deskripsi">Deskripsi</string>

    <string name="title_judulpa_pengajuan">Pengajuan Mandiri</string>
    <string name="title_bimbingan">Bimbingan</string>
    <string name="title_monev">Monev</string>
    <string name="title_sidang">Sidang</string>
    <string name="title_profil">Profil</string>
    <string name="title_informasi">Informasi</string>
    <string name="title_judulpa">Judul Proyek Akhir</string>
    <string name="title_judulpa_pendek">Judul PA</string>
    <string name="title_judulpa_dosen">Judul Dosen</string>
    <string name="title_judulpa_dosen_tambah">Tambah Judul Proyek Akhir</string>
    <string name="title_judulpa_mahasiswa">Judul Mahasiswa</string>
    <string name="title_mahasiswa">Mahasiswa</string>
    <string name="title_tolak">Tolak</string>
    <string name="title_setuju">Setuju</string>
    <string name="title_pengajuan_judulpa">Pengajuan Judul PA</string>
    <string name="title_proyekakhir">Proyek Akhir</string>
    <string name="title_informasi_detail">Detail Informasi</string>
    <string name="title_informasi_tambah">Tambah Informasi</string>
    <string name="title_bimbingan_detail">Detail Bimbingan</string>
    <string name="title_monev_detail">Detail Monev</string>
    <string name="title_keluar">Keluar</string>
    <string name="title_list_bimbingan">Bimbingan</string>
    <string name="title_list_monev">Monev</string>
    <string name="title_mahasiswa_detail">Detail Mahasiswa</string>
    <string name="title_bimbingan_tambah">Bimbingan Mahasiswa</string>
    <string name="title_monev_tambah">Monev Mahasiswa</string>
    <string name="title_pemberitahuan">Pemberitahuan</string>
    <string name="title_informasi_ubah">Ubah Informasi</string>
    <string name="title_judulpa_detail">Detail Judul Proyek Akhir</string>
    <string name="title_bimbingan_ubah">Ubah Bimbingan</string>
    <string name="title_monev_ubah">Ubah Monev</string>
    <string name="title_judulpa_dosen_ubah">Ubah Judul Proyek Akhir Dosen</string>
    <string name="title_profil_ubah">Ubah Profil</string>

    <string name="button_click_masuk">Masuk</string>
    <string name="button_click_simpan">Simpan</string>
    <string name="button_click_tambah_judul">Tambah Judul</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="dummy">Dummy</string>
    <string name="dummyLong">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam veniam similique voluptates odit, ipsum laborum architecto distinctio harum, provident fugiat praesentium ex quod dolores laudantium aliquid quidem placeat incidunt vitae!</string>
    <string name="dummy_mahasiswa_nim">6706160014</string>
    <string name="dummy_mahasiswa_nama">Ikhsan Ramadhan</string>
    <string name="dummy_mahasiswa_kelompok">Seven Primavera</string>
    <string name="dummy_pa_judul">Finpro - Mobile Based Final Project Management System</string>
    <string name="dummy_anggota_kelompok_1">Muh. Faisal Amir</string>
    <string name="dummy_anggota_kelompok_2">M. Ikhsan Ramadhan</string>
    <string name="dummy_anggota_nim_1">6706160014</string>
    <string name="dummy_anggota_nim_2">6706162062</string>
    <string name="dummy_jumlah_bimbingan">6</string>
    <string name="dummy_dosen_reviewer">Indra Azimi, S.T., M.T.</string>
    <string name="dummy_monev_terkahir">3</string>
    <string name="dummy_dosen_pembimbing">Hariandi Maulid, S.T., M.Sc</string>
    <string name="dummy_tanggal">28 Januari 2019</string>
    <string name="dummy_hasil_bimbingan">Revisi Bab 1</string>
    <string name="dummy_nilai_monev">80</string>
    <string name="dummy_no_telp">081357108568</string>
    <string name="dummy_kelas">D3IF-40-02</string>
    <string name="dummy_status_dosen">Pembimbing, Reviewer</string>
    <string name="dummy_kategori">Android</string>
    <string name="dummy_pa_kategori">Android</string>
    <string name="dummy_pa_jumlah_pengajuan">4</string>

    <string name="text_profil_detail_nama">Nama</string>
    <string name="text_profil_detail_nip">NIP</string>
    <string name="text_profil_detail_nim">NIM</string>
    <string name="text_profil_detail_kelas">Kelas</string>
    <string name="text_profil_detail_jurusan">Jurusan</string>
    <string name="text_profil_detail_status">Status</string>
    <string name="text_profil_detail_notelp">No Telp</string>
    <string name="text_profil_detail_kelompok">Kelompok</string>
    <string name="text_bimbingan_home_judul">Bimbingan Kelompok Proyek Akhir</string>
    <string name="text_dosen_pembimbing">Dosen Pembimbing</string>
    <string name="text_jumlah_bimbingan">Jumlah Bimbingan</string>
    <string name="text_title_pa">Data Proyek Akhir Mahasiswa</string>
    <string name="text_monev_terakhir">Monev Terakhir</string>
    <string name="text_dosen_reviewer">Dosen Reviewer</string>
    <string name="text_daftar_bimbingan">Daftar Bimbingan</string>
    <string name="text_daftar_monev">Daftar Monev</string>
    <string name="text_mahasiswa_bimbingan">Mahasiswa yang di bimbing</string>
    <string name="text_mahasiswa_monev">Mahasiswa yang di review</string>
    <string name="text_ubah">Ubah</string>
    <string name="text_hapus">Hapus</string>
    <string name="text_oleh">Oleh :</string>
    <string name="text_prodi">D3 Rekayasa Perangkat Lunak Aplikasi</string>
    <string name="text_lupa_kata_sandi">Lupa kata sandi?</string>
    <string name="text_klik_disini">Klik disini</string>
    <string name="text_informasi">Informasi :</string>
    <string name="text_titiktitik">........ baca selengkapnya</string>
    <string name="text_d3rpla">D3 Rekayasa Perangkat Lunak Aplikasi</string>
    <string name="text_telkomuniversity">Telkom University</string>
    <string name="text_nama_kelompok">Nama Kelompok</string>
    <string name="text_judul_proyek_akhir">Judul Proyek Akhir</string>
    <string name="text_anggota_kelompok">Anggota Kelompok</string>
    <string name="text_nama">Nama</string>
    <string name="text_nim">NIM</string>
    <string name="text_tanggal_pengajuan">Tanggal Pengajuan</string>
    <string name="text_tanggal">Tanggal</string>
    <string name="text_deskripsi_judul_pa">Deskripsi Judul Proyek Akhir</string>
    <string name="text_deskripsi">Deskripsi</string>
    <string name="text_nama_dosen_pembimbing">Nama Dosen Pembimbing</string>
    <string name="text_kategori">Kategori</string>
    <string name="text_proyek_akhir">Proyek Akhir</string>
    <string name="text_daftar_mahasiswa">Daftar Pengajuan Mahasiswa</string>
    <string name="text_setuju">Setuju</string>
    <string name="text_tolak">Tolak</string>
    <string name="text_ajukan_judul">Ajukan Judul</string>
    <string name="text_daftar_mahasiswa_bimbingan">Daftar mahasiswa bimbingan</string>
    <string name="text_daftar_mahasiswa_monev">Daftar mahasiswa monev</string>
    <string name="text_daftar_mahasiswa_sidang">Daftar mahasiswa sidang</string>
    <string name="text_daftar_judul_pa_dosen">Daftar Judul Proyek Akhir Dosen</string>
    <string name="text_daftar_judul_pa_mahasiswa">Dafta Judul Proyek Akhir Pengajuan Mahasiswa</string>

    <string-array name="nama_dosen">
        <item>Amir Hasanudin Fauzi, S.T., M.T.</item>
        <item>Hariandi Maulid, S.T., M.Sc.</item>
        <item>Hetti Hidayati, S.Kom., M.T.</item>
        <item>Indra Azimi, S.T., M.T.</item>
        <item>Rahmadi Wijaya, S.Si., M.T.</item>
        <item>Rizza Indah Mega Mandasari, S.Kom., M.T.</item>
        <item>Tri Brotoharsono, S.T., M.T.</item>
    </string-array>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">@string/app_name_subtitle</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_informasi">Informasi</string>
    <string name="menu_mahasiswa">Mahasiswa</string>
    <string name="menu_dosen">Dosen</string>
    <string name="menu_proyek_akhir">Proyek Akhir</string>
    <string name="menu_judul_pa">Judul PA</string>
    <string name="title_dosen">Dosen</string>

</resources>
