<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/colorBackground"
    tools:context=".views.fragments.MahasiswaPaFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_margin="@dimen/dimen_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_title_pa"/>

        <android.support.v7.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="@dimen/dimen_medium"
                android:layout_marginBottom="@dimen/dimen_medium"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/frg_mhs_pa_textview_kelompokpa"
                    android:layout_marginStart="@dimen/dimen_big"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextBlack"
                    android:text="@string/dummy_mahasiswa_kelompok"
                    android:textSize="@dimen/text_size_title_medium"/>

                <TextView
                    android:id="@+id/frg_mhs_pa_textview_judulpa"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginStart="@dimen/dimen_big"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_pa_judul"
                    android:maxLines="1"/>

                <View
                    android:layout_marginTop="@dimen/dimen_medium"
                    android:layout_marginBottom="@dimen/dimen_medium"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_view_line"
                    android:background="@color/colorBackground"/>

                <TextView
                    android:id="@+id/frg_mhs_pa_textview_nim_1"
                    android:layout_marginStart="@dimen/dimen_big"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextBlack"
                    android:text="@string/dummy_anggota_nim_1"/>

                <TextView
                    android:id="@+id/frg_mhs_pa_textview_nama_1"
                    android:layout_marginStart="@dimen/dimen_big"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_title_small"
                    android:text="@string/dummy_anggota_kelompok_1"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/frg_mhs_pa_textview_nim_2"
                    android:layout_marginTop="@dimen/dimen_big"
                    android:layout_marginStart="@dimen/dimen_big"
                    android:textColor="@color/colorTextBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_anggota_nim_2"/>

                <TextView
                    android:id="@+id/frg_mhs_pa_textview_nama_2"
                    android:layout_marginStart="@dimen/dimen_big"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_title_small"
                    android:text="@string/dummy_anggota_kelompok_2"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:layout_margin="@dimen/dimen_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_title_small"
            android:text="@string/title_bimbingan"/>

        <android.support.v7.widget.CardView
            android:id="@+id/frg_mhs_pa_cardview_bimbingan"
            android:clickable="true"
            android:focusable="true"
            android:elevation="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="@dimen/dimen_medium"
                android:layout_marginBottom="@dimen/dimen_medium"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginStart="@dimen/dimen_big"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_dosen_pembimbing"/>

                <TextView
                    android:id="@+id/frg_mhs_pa_textview_dsn_pembimbing"
                    style="@style/textwiew_mahasiswa_pa_dosen"
                    android:text="@string/dummy_dosen_pembimbing"/>

                <View
                    android:layout_marginTop="@dimen/dimen_medium"
                    android:layout_marginBottom="@dimen/dimen_medium"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_view_line"
                    android:background="@color/colorBackground"/>

                <TextView
                    android:layout_marginStart="@dimen/dimen_big"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_jumlah_bimbingan"/>

                <TextView
                    android:id="@+id/frg_mhs_pa_textview_jml_bimbingan"
                    style="@style/textwiew_mahasiswa_pa_jumlah"
                    android:text="@string/dummy_jumlah_bimbingan"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:layout_margin="@dimen/dimen_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_title_small"
            android:text="@string/title_monev"/>

        <android.support.v7.widget.CardView
            android:id="@+id/frg_mhs_pa_cardview_monev"
            android:clickable="true"
            android:focusable="true"
            android:elevation="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="@dimen/dimen_medium"
                android:layout_marginBottom="@dimen/dimen_medium"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginStart="@dimen/dimen_big"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_dosen_reviewer"/>

                <TextView
                    android:id="@+id/frg_mhs_pa_textview_dsn_reviewer"
                    style="@style/textwiew_mahasiswa_pa_dosen"
                    android:text="@string/dummy_dosen_reviewer"/>

                <View
                    android:layout_marginTop="@dimen/dimen_medium"
                    android:layout_marginBottom="@dimen/dimen_medium"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_view_line"
                    android:background="@color/colorBackground"/>

                <TextView
                    android:layout_marginStart="@dimen/dimen_big"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_monev_terakhir"/>

                <TextView
                    android:id="@+id/frg_mhs_pa_textview_jml_monev"
                    style="@style/textwiew_mahasiswa_pa_jumlah"
                    android:text="@string/dummy_monev_terkahir"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:layout_margin="@dimen/dimen_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_title_small"
            android:text="@string/title_sidang"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="@dimen/dimen_medium"
                android:layout_marginBottom="@dimen/dimen_medium"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginStart="@dimen/dimen_big"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>