<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_margin="@dimen/dimen_big_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_proyek_akhir"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="@dimen/dimen_medium_8dp"
                android:layout_marginBottom="@dimen/dimen_medium_8dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginStart="@dimen/dimen_big_16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_judul_proyek_akhir"/>

                <TextView
                    android:id="@+id/frg_koor_pa_textview_judulpa"
                    style="@style/content_all_text_bold_color_primary"
                    tools:text="@string/dummy_pa_judul"/>

                <View
                    style="@style/view_all_line_horizontal"/>

                <TextView
                    android:layout_marginStart="@dimen/dimen_big_16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_kategori"/>

                <TextView
                    android:id="@+id/frg_koor_pa_textview_kategoripa"
                    android:text="@string/dummy_kategori"
                    style="@style/content_all_text_bold_color_black"
                    tools:layout_marginBottom="@dimen/dimen_medium_8dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_margin="@dimen/dimen_big_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_deskripsi"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="@dimen/dimen_medium_8dp"
                android:layout_marginBottom="@dimen/dimen_medium_8dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginStart="@dimen/dimen_big_16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_deskripsi_judul_pa"/>

                <TextView
                    android:id="@+id/frg_dsn_pa_textview_deskripsi"
                    style="@style/content_all_text_color_black"
                    tools:text="@string/dummyLong"
                    android:layout_marginBottom="@dimen/dimen_medium_8dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>